vendor/proc-macro-error-1.0.4/tests/ui/to_tokens_span.stderr
error: whole type
 --> $DIR/to_tokens_span.rs:4:17
  |
4 | to_tokens_span!(std::option::Option);
  |                 ^^^^^^^^^^^^^^^^^^^

error: explicit .span()
 --> $DIR/to_tokens_span.rs:4:17
  |
4 | to_tokens_span!(std::option::Option);
  |                 ^^^
