vendor/proc-macro-error-1.0.4/tests/ui/to_tokens_span.rs
extern crate test_crate;
use test_crate::*;

to_tokens_span!(std::option::Option);

fn main() {}
